# game_of_life

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
benches/: gameboard_next_state.rs
docs/: Doxyfile.in
examples/guns/: gosper.txt  simkin.txt
examples/oscillators/: beacon.txt  blinker.txt  penta_decathlon.txt  pulsar.txt  toad.txt
examples/spaceships/: glider.txt  heavy_weight_spaceship.txt  light_weight_spaceship.txt  middle_weight_spaceship.txt
examples/still_lifes/: beehive.txt  block.txt  boat.txt  tub.txt
include/game/: board.h
include/graphics/: screen.h
scripts/: build.sh  clean.sh  config.sh
src/: CMakeLists.txt  lib.rs  main.rs
src/game/: CMakeLists.txt  board.cpp
src/game_of_life/: CMakeLists.txt  game_of_life.cpp
src/graphics/: CMakeLists.txt  screen.cpp
