[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"
description = "A visualization of Conway's Game of Life."
license = "Unlicense"

[[bin]]
name = "life"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.20", features = ["derive"]}
crossterm = "0.28.1"
testdir = "0.9.1"
criterion = "0.5.1"

[[bench]]
name = "gameboard_next_state"
harness = false
